# sample-langchain

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
sample/github_inference/: __init__.py  commons.py  configuration_handler.py  github_models_inference_chat_model.py  math_mcp_server.py  message_converter.py  rate_limiter.py  response_parser.py  simple_agent.py  simple_agent_react.py  simple_agent_react_chatopenai_mcp.py  simple_agent_react_chatopenai_tool.py  simple_agent_react_github_mcp.py  simple_agent_react_github_tool.py  system_prompt_builder.py  tool_call_extractor.py  tool_input_parser.py  tool_parameter_extractor.py
sample/hugging_face/: prompt_template.py
tests/github_inference/: __init__.py  test_commons.py  test_configuration_handler.py  test_github_models_inference_chat_model.py  test_message_converter.py  test_rate_limiter.py  test_simple_agent_react_github_mcp.py  test_system_prompt_builder.py  test_tool_call_extractor.py  test_tool_input_parser.py  test_tool_parameter_extractor.py
